--- a/Shopping/bin/Shopping.dll.config
+++ b/Shopping/bin/Shopping.dll.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=DESKTOP-GRBJ23B\SQLEXPRESS;Database=Shopping;User Id=sa; Password=123;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=.;Database=Shopping;User Id=sa; Password=123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
